--- a/html/page2.html
+++ b/html/page2.html
@@ -7,7 +7,13 @@
 <div class="header">
   <!--Content before waves-->
   <div class="inner-header flex">
-    <h1>Üdvözöljük az EcoGourmetnél!</h1>
+    <h1>Üdvözöljük az EcoGourmetnél!
+      {{'welcome_at' | translate:lang.data}}
+    </h1>
+    <div class="text-capitalize text-small-caps d-inline-block float-start">
+      {{'welcome_at' | translate:lang.data}}
+    </div>
+
   </div>
   <!--Waves Container-->
   <div>
