page3 - few links

--- a/html/about.html
+++ b/html/about.html
@@ -1,5 +1,6 @@
-<!-- Page container -->
-<header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
+
+  <!-- Navigate -->
+  <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
 <link rel="stylesheet" href="./css/about.css">
 <!-- Page controller -->
 <div ng-app="page2">
