--- a/html/landing.html
+++ b/html/landing.html
@@ -1,5 +1,9 @@
-   <!-- Navigate -->
-   <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
+<!-- Page container -->
+<div class="page-container d-conditional vh-100">
+
+  <!-- Navigate -->
+  <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
+   
    <div class="slider-one">
     <div class="slider-one-image">
       <div class="slider-text">
