Shop basic layout , debugs

--- a/html/about.html
+++ b/html/about.html
@@ -10,8 +10,6 @@
   <div class="inner-header flex">
     <h1>Üdvözöljük az EcoGourmetnél!
     </h1>
-
-
   </div>
   <!--Waves Container-->
   <div>
@@ -97,7 +95,7 @@
           <div class="user-content">
             <h5 class="mb-0">Péter véleménye</h5>
             <span>Ács</span>
-            <p>"Nagyon hálás vagyok az EcoGourmet szolgáltatásainak. Kiváló minőségű, fenntartható ételeket és étrendeket kaptam tőlük, amelyek finomak, hanem a környezetbarát szemléletüket is tükrözik. Számomra ez a cég a tudatos és egészséges táplálkozás szinonimája."</p>
+            <p>"Nagyon hálás vagyok az EcoGourmet szolgáltatásainak. Kiváló minőségű, étrendeket kaptam tőlük, amelyek a környezetbarát szemléletüket is tükrözik. Számomra ez a cég a tudatos és egészséges táplálkozás szinonimája."</p>
           </div>
           <div class="ratings">
             <i class="fa fa-star"></i>
@@ -116,7 +114,7 @@
           <div class="user-content">
             <h5 class="mb-0">Anna véleménye</h5>
             <span>Üzletvezető</span>
-            <p>"Az étrendjük és a környezettudatos szemléletmódjuk valóban különleges. Rendkívül elégedett vagyok a velük töltött idővel, és mindenkinek ajánlom, aki jobban szeretné megérteni az egészséges étkezés és a fenntartható életmód fontosságát."</p>
+            <p>"Az étrendjük és a környezettudatos szemléletmódjuk valóban különleges. Rendkívül elégedett vagyok a velük töltött idővel, és mindenkinek ajánlom, aki jobban szeretné megérteni az egészséges étkezést."</p>
           </div>
           <div class="ratings">
             <i class="fa fa-star"></i>
