--- a/html/navigate.html
+++ b/html/navigate.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-md navbar-light bg-light" id="snip1143">
+<nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong">
   <a class="navbar-styles" href="#">
     Ecogrourmet
   </a>
@@ -19,7 +19,7 @@
     </button>
 
     <!-- Navbar container -->
-    <div class="collapse navbar-collapse mt-2 mt-md-0" id="subnav">
+    <div class="collapse navbar-collapse mt-2 mt-md-0">
 
       <!-- Left align -->
       <div class="navbar-left me-auto">
