--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="../../components/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="../../common/css/common.css">
   <link rel="stylesheet" href="./css/app.css">
+  <link rel="stylesheet" href="./css/shop.css">
+
 </head>
 <body ng-app="app">
   
