--- a/html/products.html
+++ b/html/products.html
@@ -1,5 +1,6 @@
 <!-- Navigate -->
 <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
+<!-- Controller -->
 <div ng-app="page2">
   <div ng-controller="productsController">
     <!-- Container -->
