--- a/html/products.html
+++ b/html/products.html
@@ -45,7 +45,7 @@
                   </div>
                 </div>
               </div>
-              <!-- Termék kártyák vége -->
+              <!-- Termék + kártyák vége -->
             </div>
           </div>
         </section>
