--- a/html/page.html
+++ b/html/page.html
@@ -4,3 +4,55 @@
     <!-- Navigate -->
     <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
 
+<!--Section: FAQ-->
+<section class="mx-auto p-2 shadow p-3 mb-5 bg-body-tertiary rounded text-center hidden">
+    <h3 class="fs-3 badge bg-primary text-wrap mb-5 mt-5" style="width: 14rem;">GYIK </h3>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary">
+          <i class="far fa-paper-plane text-primary pe-2"></i> Milyen étrend ajánlott a mindennapi egészséges életmódhoz?
+        </h6>
+        <p> Az egészséges életmódhoz ajánlott étrend általában magában foglalja a sok zöldség, gyümölcs, sovány fehérje, teljes kiőrlésű gabonafélék és egészséges zsírok fogyasztását. Fontos az étkezési adagok mértékletes tartása és az édességek, <strong>
+            <u>feldolgozott élelmiszerek korlátozása.</u>
+          </strong>
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-pen-alt text-primary pe-2"></i>Hogyan lehet csökkenteni a napi kalóriabevitelt egészségesebb táplálkozással?
+        </h6>
+        <p>
+          <strong>
+            <u> A napi kalóriabevitel csökkentése érdekében </u>
+          </strong> érdemes az élelmiszerek választásánál olyan lehetőségekre koncentrálni, amelyek alacsonyabb kalóriatartalommal rendelkeznek. Például a sovány fehérjék, a zöldségek és a teljes kiőrlésű gabonafélék segíthetnek csökkenteni a kalóriabevitelt.
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-user text-primary pe-2"></i> Mit tehetek, ha a fogyás a célom?
+        </h6>
+        <p> Ha a fogyás a cél, fontos olyan étrendet követni, amely kalóriadeficitet teremt, vagyis több kalóriát éget el, mint amennyit fogyaszt. Ezt azzal érheti el, hogy mértékletesen eszik, rendszeresen mozog, és egészséges ételeket választ. </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-home text-primary pe-2"></i> Mi az optimális napi vízbevitel mennyisége?
+        </h6>
+        <p> Az egészséges étrend és életmód számos előnnyel jár, mint például a jobb egészség, az energia növelése, a súlykontroll, az anyagcsere javítása és <strong>
+            <u> a krónikus betegségek kockázatának csökkentése.</u>. </strong>
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-book-open text-primary pe-2"></i> Hogyan történik a fizetés az EcoGourmet szolgáltatásaiért?
+        </h6>
+        <p> A fizetés az EcoGourmet szolgáltatásaiért általában online történik, és elfogadnak különböző fizetési módokat, például bankkártyát vagy PayPal-t. Az egyes szolgáltatásokért vagy csomagokért meghatározott árat kell kifizetni, és a fizetési részletekkel kapcsolatban bővebb információt a cég weboldalán vagy ügyfélszolgálatán találhat. </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-rocket text-primary pe-2"></i> Hogyan mondhatom fel a fizetést az EcoGourmet szolgáltatásaiért?
+        </h6>
+        <p> A fizetés felmondása az EcoGourmet szolgáltatásaiért általában az ügyfél fiókjában vagy az ügyfélszolgálaton keresztül történik. Az ügyfélszolgálat segíteni fog a felmondási folyamatban, és a megszüntetéshez szükséges lépéseket ismertetik. Fontos figyelni a felmondási határidőket és feltételeket, amelyeket a cég meghatározott. </p>
+      </div>
+    </div>
+  </section>
