shop changes - about changes

--- a/html/navigate.html
+++ b/html/navigate.html
@@ -23,7 +23,6 @@
 
       <!-- Left align -->
       <div class="navbar-left me-auto">
-
       
       </div>
 
@@ -36,7 +35,7 @@
             <li class="nav-item">
               <a class="nav-link" 
                  ui-sref="about">
-                <i class="fa-solid fa-male fa-lg me-1"></i>
+                <i class="fa-solid fa-cutlery fa-lg me-1"></i>
                 <span class="text-capitalize text-small-caps">
                   {{'about' | translate:lang.data}}
                 </span>
@@ -47,9 +46,22 @@
             <li class="nav-item">
               <a class="nav-link" 
                  ui-sref="products">
-                <i class="fa-solid fa-male fa-lg me-1"></i>
+                <i class="fa-solid fa-shopping-bag fa-lg me-1"></i>
                 <span class="text-capitalize text-small-caps">
                   {{'products' | translate:lang.data}}
+                </span>
+              </a>
+            </li>
+
+
+
+            <!-- Pages -->
+            <li class="nav-item">
+              <a class="nav-link" 
+                 ui-sref="page3">
+                <i class="fa-solid fa-shopping-bag fa-lg me-1"></i>
+                <span class="text-capitalize text-small-caps">
+                  {{'page3' | translate:lang.data}}
                 </span>
               </a>
             </li>
