deleting trash codes

--- a/html/products.html
+++ b/html/products.html
@@ -17,7 +17,7 @@
 <!-- Controller -->
 <div ng-app="products">
    <div ng-controller="productsController">
-      <h2 class="text-center">Termékek Carousel</h2>
+      <h2 class="text-center">Termékek</h2>
       <hr>
       <!-- Container -->
       <div class="container-fluid pt-5">
@@ -63,4 +63,5 @@
       </div>
    </div>
 </div>
+
 <footer ng-include src="'./html/footer.html'"></footer>
