--- a/html/about.html
+++ b/html/about.html
@@ -12,6 +12,7 @@
                  <source src="./media/video/robin.mp4" type="video/mp4">
               </video>
            </div>
+         <!-- Home title -->
            <div class="home">
               <div class="home-content">
                  <h1 id="abut">EcoGourmet</h1>
@@ -75,86 +76,83 @@
                  </div>
               </div>
            </section>
-           <!-- Menu Section  -->
-           <section id="menu" class="menu hidden">
-              <div class="container" data-aos="fade-up">
-                 <div class="section-header">
-                    <h2>Menü ötletek nektek!</h2>
-                    <p>Nagyon Finom! <span> Nagyon jó!</span>
-                    </p>
-                 </div>
-                 <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="200">
-                    <li class="nav-item">
-                       <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-breakfast">
-                          <h4>Reggeli</h4>
-                       </a>
-                       <!-- End tab nav item -->
-                    <li class="nav-item">
-                       <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-lunch">
-                          <h4>Ebéd</h4>
-                       </a>
-                    </li>
-                    <!-- End tab nav item -->
-                    <li class="nav-item">
-                       <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-dinner">
-                          <h4>Vacsora</h4>
-                       </a>
-                    </li>
-                    <!-- End tab nav item -->
-                 </ul>
-                 <div class="tab-content" data-aos="fade-up" data-aos-delay="300">
-                    <!-- Breakfast Menu Content -->
-                    <div class="tab-pane fade active show" id="menu-breakfast">
-                       <div class="tab-header text-center">
-                          <p>Menu</p>
-                          <h3>Reggeli</h3>
-                       </div>
-                       <div class="row gy-5">
-                          <div class="col-lg-4 menu-item" ng-repeat="recipe in breakfastRecipes">
-                             <!-- Display breakfast recipe details here -->
-                             <h4>{{ recipe.name }}</h4>
-                             <p class="ingredients">{{ recipe.ingredients }}</p>
-                             <p class="time">{{ recipe.cooking_time }} perc </p>
-                          </div>
-                       </div>
-                    </div>
-                    <!-- End Breakfast Menu Content -->
-                    <!-- Lunch Menu Content -->
-                    <div class="tab-pane fade" id="menu-lunch">
-                       <div class="tab-header text-center">
-                          <p>Menu</p>
-                          <h3>Ebéd</h3>
-                       </div>
-                       <div class="row gy-5">
-                          <div class="col-lg-4 menu-item" ng-repeat="recipe in lunchRecipes">
-                             <!-- Display lunch recipe details here -->
-                             <h4>{{ recipe.name }}</h4>
-                             <p class="ingredients">{{ recipe.ingredients }}</p>
-                             <p class="time">{{ recipe.cooking_time }} perc </p>
-                          </div>
-                       </div>
-                    </div>
-                    <!-- End Lunch Menu Content -->
-                    <!-- Dinner Menu Content -->
-                    <div class="tab-pane fade" id="menu-dinner">
-                       <div class="tab-header text-center">
-                          <p>Menu</p>
-                          <h3>Vacsora</h3>
-                       </div>
-                       <div class="row gy-5">
-                          <div class="col-lg-4 menu-item" ng-repeat="recipe in dinnerRecipes">
-                             <!-- Display dinner recipe details here -->
-                             <h4>{{ recipe.name }}</h4>
-                             <p class="ingredients">{{ recipe.ingredients }}</p>
-                             <p class="time">{{ recipe.cooking_time }} perc </p>
-                          </div>
-                       </div>
-                    </div>
-                    <!-- End Dinner Menu Content -->
-                 </div>
-              </div>
-           </section>
-           <!-- End Menu Section -->
+         <!-- Menu Section  -->
+         <section id="menu" class="menu hidden" ng-init="activeTab = 'menu-breakfast'">
+            <div class="container" data-aos="fade-up">
+               <div class="section-header">
+                  <h2>Menü ötletek nektek!</h2>
+                  <p>Nagyon Finom! <span> Nagyon jó!</span></p>
+               </div>
+               <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="200">
+                  <li class="nav-item">
+                     <a class="nav-link active" data-bs-toggle="tab" href="#menu-breakfast" ng-click="activeTab = 'menu-breakfast'">
+                        <h4>Reggeli</h4>
+                     </a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" data-bs-toggle="tab" href="#menu-lunch" ng-click="activeTab = 'menu-lunch'">
+                        <h4>Ebéd</h4>
+                     </a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" data-bs-toggle="tab" href="#menu-dinner" ng-click="activeTab = 'menu-dinner'">
+                        <h4>Vacsora</h4>
+                     </a>
+                  </li>
+               </ul>
+               <div class="tab-content" data-aos="fade-up" data-aos-delay="300">
+                  <!-- Breakfast Menu Content -->
+                  <div class="tab-pane fade in active show" id="menu-breakfast" ng-show="activeTab === 'menu-breakfast'">
+                     <div class="tab-header text-center">
+                        <p>Menu</p>
+                        <h3>Reggeli</h3>
+                     </div>
+                     <div class="row gy-5">
+                        <div class="col-lg-4 menu-item" ng-repeat="recipe in breakfastRecipes">
+                           <!-- Display breakfast recipe details here -->
+                           <h4>{{ recipe.name }}</h4>
+                           <p class="ingredients">{{ recipe.ingredients }}</p>
+                           <p class="time">{{ recipe.cooking_time }} perc </p>
+                        </div>
+                     </div>
+                  </div>
+                  <!-- End Breakfast Menu Content -->
+                  <!-- Lunch Menu Content -->
+                  <div class="tab-pane fade" id="menu-lunch" ng-show="activeTab === 'menu-lunch'">
+                     <div class="tab-header text-center">
+                        <p>Menu</p>
+                        <h3>Ebéd</h3>
+                     </div>
+                     <div class="row gy-5">
+                        <div class="col-lg-4 menu-item" ng-repeat="recipe in lunchRecipes">
+                           <!-- Display lunch recipe details here -->
+                           <h4>{{ recipe.name }}</h4>
+                           <p class="ingredients">{{ recipe.ingredients }}</p>
+                           <p class="time">{{ recipe.cooking_time }} perc </p>
+                        </div>
+                     </div>
+                  </div>
+                  <!-- End Lunch Menu Content -->
+                  <!-- Dinner Menu Content -->
+                  <div class="tab-pane fade" id="menu-dinner" ng-show="activeTab === 'menu-dinner'">
+                     <div class="tab-header text-center">
+                        <p>Menu</p>
+                        <h3>Vacsora</h3>
+                     </div>
+                     <div class="row gy-5">
+                        <div class="col-lg-4 menu-item" ng-repeat="recipe in dinnerRecipes">
+                           <!-- Display dinner recipe details here -->
+                           <h4>{{ recipe.name }}</h4>
+                           <p class="ingredients">{{ recipe.ingredients }}</p>
+                           <p class="time">{{ recipe.cooking_time }} perc </p>
+                        </div>
+                     </div>
+                  </div>
+                  <!-- End Dinner Menu Content -->
+               </div>
+            </div>
+         </section>
+         <!-- End Menu Section -->
            <!-- pricing tabs -->
            <section class="hidden bg-light py-5 ">
               <div class="container px-5 my-5">
