--- a/html/products.html
+++ b/html/products.html
@@ -26,17 +26,22 @@
             <!-- Kategória szűrő gombok -->
             <div class="col-md-1 mb-2">
                <div class="list-group">
-                  <button class="list-group-item list-group-item-action btn btn-sm" ng-repeat="category in getCategoryList()" ng-click="setCategoryFilter(category)" style="max-width:100%;">{{category}}</button>
+                  <button class="list-group-item list-group-item-action btn btn-sm"
+                     ng-repeat="category in getCategoryList()" ng-click="setCategoryFilter(category)"
+                     style="max-width:100%;">{{category}}</button>
                   <!-- Szűrés törlése -->
-                  <button class="list-group-item list-group-item-action btn btn-warning btn-sm mt-3" ng-click="clearFilters()" style="max-width: 100%;">Szűrés törlése</button>
+                  <button class="list-group-item list-group-item-action btn btn-warning btn-sm mt-3"
+                     ng-click="clearFilters()" style="max-width: 100%;">Szűrés törlése</button>
                </div>
             </div>
             <!-- Termék kártyák + ng rep szűrés (korlátozva 8 termékre) -->
             <div class="col-md-9 mx-auto">
                <div class="card-container text-center">
-                  <div class="card mb-4" ng-repeat="product in filteredProducts = (products | filter: { kategoria: categoryFilter } | limitTo: 8)">
+                  <div class="card mb-4"
+                     ng-repeat="product in filteredProducts = (products | filter: { kategoria: categoryFilter } | limitTo: 8)">
                      <!-- Termék képe -->
-                     <div class="card-img" ng-style="{ 'background-image': 'url(' + product.kep_eleresi_ut + ')' }"></div>
+                     <div class="card-img" ng-style="{ 'background-image': 'url(' + product.kep_eleresi_ut + ')' }">
+                     </div>
                      <!-- Termék részletei -->
                      <div class="card-body">
                         <div>
