--- a/html/about.html
+++ b/html/about.html
@@ -2,95 +2,46 @@
 <div class="page-container d-conditional vh-100">
    <!-- Navigate -->
    <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
-   <!-- Page controller -->
-   <div ng-app="page2">
-      <div ng-controller="aboutController">
-         <div class="header">
+
             <!-- Video Container -->
             <div class="video-container">
                <video autoplay muted loop class="blurred-video">
                   <source src="./media/video/robin.mp4" type="video/mp4">
                </video>
             </div>
+
             <!-- Home title -->
             <div class="home">
                <div class="home-content">
                   <h1 id="abut">EcoGourmet</h1>
                </div>
             </div>
+
             <!--Content after video-->
             <div class="inner-header flex">
                <!-- Additional content if needed -->
             </div>
-            <!-- Section: about us text part -->
+
+            <!-- Section: about us text part angular version -->
             <section class="hidden" id="scroll">
-               <div class="container px-5">
+               <div class="container px-5" ng-repeat="aboutUsText in aboutUsTexts">
                   <div class="row gx-5 align-items-center">
-                     <div class="col-lg-6 order-lg-2">
+                     <div class="col-lg-6" ng-class="{ 'order-lg-2': $first || $index === 2 }">
                         <div class="p-5">
-                           <img class="img-fluid rounded-circle" src="./media/image/ffood1.jpg" alt="..." />
+                           <img class="img-fluid rounded-circle" ng-src="{{ aboutUsText.image }}" alt="..." />
                         </div>
                      </div>
-                     <div class="col-lg-6 order-lg-1">
+                     <div class="col-lg-6" ng-class="{ 'order-lg-1': $first && $index !== 2 }">
                         <div class="p-5">
-                           <h2 class="display-4">Zöld étrendek...</h2>
-                           <p> Az étrendek nemcsak az egészséget, hanem az ízletes ételek élvezetét is hangsúlyozzák,
-                              így az ügyfelek élvezhetik az egészséges táplálkozás előnyeit.Az EcoGourmet hisz abban,
-                              hogy az egészséges életmód és a fenntarthatóság kompatibilis célok, amelyeket minden
-                              ügyfél számára elérhetővé tesz. Tevékenységük összehangolja a személyes jólétet és a
-                              környezeti felelősséget, így hozzájárulnak a fenntartható jövő kialakításához. Az
-                              EcoGourmet az eszményi példája a táplálkozási tanácsadásnak, amely egyszerre ötvözi a
-                              közösségi és környezeti felelősségvállalást. </p>
+                           <h2 class="display-4">{{ aboutUsText.title }}</h2>
+                           <p>{{ aboutUsText.description }}</p>
                         </div>
                      </div>
                   </div>
                </div>
             </section>
-            <!-- Content section 2-->
-            <section class="hidden" id="scroll">
-               <div class="container px-5">
-                  <div class="row gx-5 align-items-center">
-                     <div class="col-lg-6">
-                        <div class="p-5">
-                           <img class="img-fluid rounded-circle" src="./media/image/tree1.jpg" alt="..." />
-                        </div>
-                     </div>
-                     <div class="col-lg-6">
-                        <div class="p-5">
-                           <h2 class="display-4">Miért Eco?</h2>
-                           <p> Mivel minden vásárlásuk után a cég egy fát ültet, hozzájárulva a környezetvédelemhez és a
-                              globális klímaváltozás elleni küzdelemhez.A táplálkozási tanácsadás terén az EcoGourmet az
-                              egyéni igényeket és célokat szem előtt tartja, és minden étrendet a testsúly ideális
-                              szintjéhez optimalizál. A cég munkatársai magas szintű szakértelemmel és
-                              elkötelezettséggel dolgoznak az ügyfelekkel, hogy segítsenek nekik az egészséges
-                              étkezéshez vezető úton. </p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </section>
-            <!-- Content section 3-->
-            <section class="hidden">
-               <div class="container px-5">
-                  <div class="row gx-5 align-items-center">
-                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5">
-                           <img class="img-fluid rounded-circle" src="./media/image/enjoy1.jpg" alt="..." />
-                        </div>
-                     </div>
-                     <div class="col-lg-6 order-lg-1">
-                        <div class="p-5">
-                           <h2 class="display-4">Együtt elérjük!</h2>
-                           <p> Az EcoGourmet egy kivételes vállalkozás, amely elkötelezett az egészséges életmód és a
-                              környezetvédelem iránt. Cégfilozófiájuk az ökológia és a gasztronómia harmonikus
-                              egyesítése, hogy ügyfeleiknek az optimális testsúlyhoz vezető útmutatást nyújtsák,
-                              miközben fenntartható módon gondoskodnak a környezetről. </p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </section>
-            <!-- Menu Section  -->
+
+            <!--sub-nav with menu-->
             <section id="menu" class="menu hidden" ng-init="activeTab = 'menu-breakfast'">
                <div class="container" data-aos="fade-up">
                   <div class="section-header">
@@ -117,6 +68,7 @@
                      </li>
                   </ul>
                   <div class="tab-content" data-aos="fade-up" data-aos-delay="300">
+
                      <!-- Breakfast Menu Content -->
                      <div class="tab-pane fade in active show" id="menu-breakfast"
                         ng-show="activeTab === 'menu-breakfast'">
@@ -126,14 +78,13 @@
                         </div>
                         <div class="row gy-5">
                            <div class="col-lg-4 menu-item" ng-repeat="recipe in breakfastRecipes">
-                              <!-- Display breakfast recipe details here -->
                               <h4>{{ recipe.name }}</h4>
                               <p class="ingredients">{{ recipe.ingredients }}</p>
                               <p class="time">{{ recipe.cooking_time }} perc </p>
                            </div>
                         </div>
                      </div>
-                     <!-- End Breakfast Menu Content -->
+
                      <!-- Lunch Menu Content -->
                      <div class="tab-pane fade" id="menu-lunch" ng-show="activeTab === 'menu-lunch'">
                         <div class="tab-header text-center">
@@ -142,14 +93,13 @@
                         </div>
                         <div class="row gy-5">
                            <div class="col-lg-4 menu-item" ng-repeat="recipe in lunchRecipes">
-                              <!-- Display lunch recipe details here -->
                               <h4>{{ recipe.name }}</h4>
                               <p class="ingredients">{{ recipe.ingredients }}</p>
                               <p class="time">{{ recipe.cooking_time }} perc </p>
                            </div>
                         </div>
                      </div>
-                     <!-- End Lunch Menu Content -->
+
                      <!-- Dinner Menu Content -->
                      <div class="tab-pane fade" id="menu-dinner" ng-show="activeTab === 'menu-dinner'">
                         <div class="tab-header text-center">
@@ -158,18 +108,16 @@
                         </div>
                         <div class="row gy-5">
                            <div class="col-lg-4 menu-item" ng-repeat="recipe in dinnerRecipes">
-                              <!-- Display dinner recipe details here -->
                               <h4>{{ recipe.name }}</h4>
                               <p class="ingredients">{{ recipe.ingredients }}</p>
                               <p class="time">{{ recipe.cooking_time }} perc </p>
                            </div>
                         </div>
                      </div>
-                     <!-- End Dinner Menu Content -->
                   </div>
                </div>
             </section>
-            <!-- End Menu Section -->
+            
             <!-- pricing tabs -->
             <section class="hidden bg-light py-5 ">
                <div class="container px-5 my-5">
@@ -209,50 +157,30 @@
                </div>
             </section>
             <!-- end pricing tabs -->
-            <!-- Testimonials-->
+
+            <!-- Testimonials angularositot-->
             <section class="testimonials text-center bg-light hidden">
                <div class="container">
                   <h2 class="mb-5">Mit mondanak rólunk...</h2>
                   <div class="row">
-                     <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                           <div class="rounded-circle overflow-hidden mx-auto" style="width: 150px; height: 150px;">
-                              <img class="img-fluid rounded-circle mb-3" src="./media/image/zsofia.jpg" alt="..." />
+                     <div class="col-lg-4" ng-repeat="testimonial in testimonials.slice(0, 3)">
+                           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                              <div class="rounded-circle overflow-hidden mx-auto" style="width: 150px; height: 150px;">
+                                 <img class="img-fluid rounded-circle mb-3" ng-src="{{ testimonial.kep_url }}" alt="..." />
+                              </div>
+                              <h5 class="mt-4">{{ testimonial.name }}</h5>
+                              <p class="font-weight-light mb-0">{{ testimonial.description }}</p>
                            </div>
-                           <h5 class="mt-4">Zsófia véleménye</h5>
-                           <p class="font-weight-light mb-0">"Az EcoGourmet segítségével sikerült megtalálnom az
-                              egészséges életmód és a finom étkezés tökéletes egyensúlyát. Az általuk kínált személyre
-                              szabott tanácsok és étrendek segítettek javítani az étkezési szokásaimon, és most jobban
-                              érzem magam."</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                           <div class="rounded-circle overflow-hidden mx-auto" style="width: 150px; height: 150px;">
-                              <img class="img-fluid rounded-circle mb-3" src="./media/image/péter.jpg" alt="..." />
-                           </div>
-                           <h5 class="mt-4">Péter véleménye</h5>
-                           <p class="font-weight-light mb-0">"Nagyon hálás vagyok az EcoGourmet szolgáltatásainak.
-                              Kiváló minőségű, étrendeket kaptam tőlük, amelyek a környezetbarát szemléletüket is
-                              tükrözik. Számomra ez a cég a tudatos és egészséges táplálkozás szinonimája."</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                           <div class="rounded-circle overflow-hidden mx-auto" style="width: 150px; height: 150px;">
-                              <img class="img-fluid rounded-circle mb-3" src="./media/image/anna.jpg" alt="..." />
-                           </div>
-                           <h5 class="mt-4">Anna véleménye</h5>
-                           <p class="font-weight-light mb-0">"Az étrendjük és a környezettudatos szemléletmódjuk valóban
-                              különleges. Rendkívül elégedett vagyok a velük töltött idővel, és mindenkinek ajánlom, aki
-                              jobban szeretné megérteni az egészséges étkezést."</p>
-                        </div>
                      </div>
                   </div>
                </div>
+               <button
+               type="button"
+               class="btn btn-secondary btn-floating btn-lg"
+               id="btn-back-to-top">
+               <i class="fas fa-arrow-up"></i>
+               </button>
             </section>
-            <!-- Testimonials end here-->
-         </div>
          <footer ng-include src="'./html/footer.html'"></footer>
       </div>
    </div>
