--- a/html/navigate.html
+++ b/html/navigate.html
@@ -31,7 +31,7 @@
           <!-- Navigate -->
           <ul class="navbar-nav">
 
-            <!-- Pages -->
+            <!-- About Us -->
             <li class="nav-item">
               <a class="nav-link" 
                  ui-sref="about">
@@ -42,7 +42,7 @@
               </a>
             </li>
 
-            <!-- Pages -->
+            <!-- Products / Store -->
             <li class="nav-item">
               <a class="nav-link" 
                  ui-sref="products">
@@ -53,16 +53,17 @@
               </a>
             </li>
 
-            <!-- Pages -->
+            <!-- Services -->
             <li class="nav-item">
               <a class="nav-link" 
-                 ui-sref="page3">
-                <i class="fa-solid fa-shopping-bag fa-lg me-1"></i>
-                <span class="text-capitalize text-small-caps">
-                  {{'page3' | translate:lang.data}}
+                 ui-sref="services">
+                 <i class="fa-solid fa-utensils fa-lg me-1"></i>
+                 <span class="text-capitalize text-small-caps">
+                  {{'services' | translate:lang.data}}
                 </span>
               </a>
             </li>
+
           </ul>
       </div>
 
