Products page skeleton - About us page top button

--- a/html/navigate.html
+++ b/html/navigate.html
@@ -35,7 +35,7 @@
             <li class="nav-item">
               <a class="nav-link" 
                  ui-sref="about">
-                <i class="fa-solid fa-cutlery fa-lg me-1"></i>
+                <i class="fa-solid fa-handshake fa-lg me-1"></i>
                 <span class="text-capitalize text-small-caps">
                   {{'about' | translate:lang.data}}
                 </span>
@@ -46,7 +46,7 @@
             <li class="nav-item">
               <a class="nav-link" 
                  ui-sref="products">
-                <i class="fa-solid fa-shopping-bag fa-lg me-1"></i>
+                <i class="fa-solid fa-shop fa-lg me-1"></i>
                 <span class="text-capitalize text-small-caps">
                   {{'products' | translate:lang.data}}
                 </span>
