--- a/html/about.html
+++ b/html/about.html
@@ -174,18 +174,17 @@
                      </div>
                   </div>
                </div>
-
-<!-- scroll to top button -->
-<div class="scroll-to-top" ng-click="smoothScrollToTop()">
-   <!-- You can customize the arrow icon or use text like "Top" -->
-   <span class="arrow-up">&#8593;
-   </span>
-</div>
-
-
-     
             </section>
+                              <!-- scroll to top button -->
+         <div class="scroll-to-top text-center bg-light hidden" ng-click="smoothScrollToTop()">
+            <!-- You can customize the arrow icon or use text like "Top" -->
+            <span class="arrow-up small" style="font-size: 15px; margin-top: 50px;"><i class="fas fa-thin fa-arrow-up fa-bounce"></i>
+               Vissza a lap tetejére!
+            </span><i class="fas fa-thin fa-arrow-up fa-bounce"></i>
+         </div>
          <footer ng-include src="'./html/footer.html'">
          </footer>
+
+
       </div>
    </div>
